applications/workspaces/upstream/frontend/components/istio/destination-rule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: workspaces-frontend
spec:
  host: workspaces-frontend.kubeflow-workspaces.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
